# subslice.rs

./: Cargo.toml  README.rst
benches/: pathology.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  substring.rs
src/: bmh.rs  lib.rs  set.rs  tw.rs
tests/: quick.rs
